# AdventOfCode

./: CMakeLists.txt  README.md
.github/workflows/: python.yml  rust.yml
2015/: ch1.py  ch10.py  ch11.py  ch12.py  ch13.py  ch14.py  ch15.py  ch2.py  ch3.py  ch4.py  ch5.py  ch6.py  ch7.py  ch8.py  ch9.py  ch9theo.py
2016/ch1/: ch1.py  ch1_2.py
2016/ch2/: ch2.py  ch2_2.py
2016/ch3/: ch3.py  ch3_2.py
2016/ch4/: ch4.py  ch4_2.py
2016/ch5/: ch5.py  ch5_2.py
2016/ch6/: ch6.py  ch6_2.py
2016/ch7/: ch7.py  ch7_2.py
2016/ch8/: ch8.py
2017/ch1/: ch1.erl  ch1.py  ch1_2.erl  ch1_2.py
2017/ch10/: ch10.py  ch10_2.py
2017/ch11/: ch11.py  ch11_2.py
2017/ch12/: ch12.py  ch12_2.py
2017/ch13/: ch13.py  ch13_2.py
2017/ch14/: ch14.py
2017/ch16/: ch16.py
2017/ch17/: ch17.py  ch17_2.py
2017/ch18/: ch18.py
2017/ch2/: ch2.erl  ch2.py  ch2_2.erl  ch2_2.py
2017/ch3/: ch3.erl  ch3.py  ch3_2.py
2017/ch4/: ch4.erl  ch4.py  ch4_2.erl  ch4_2.py
2017/ch5/: ch5.erl  ch5.py  ch5_2.erl  ch5_2.py
2017/ch6/: ch6.erl  ch6.py  ch6_2.erl  ch6_2.py
2017/ch7/: ch7.erl  ch7.py  ch7_2.py
2017/ch8/: ch8.py
2017/ch9/: ch9.py
2019/3/: solve.py
2020/1/: solve.py
2020/15/: solve.py
2020/2/: solve.py
2020/rust/: Cargo.toml
2020/rust/src/: day01.rs  day15.rs
2021/1/: solve.cpp  solve.py
2021/10/: solve.py
2021/11/: solve.py
2021/12/: solve.py
2021/13/: solve.py
2021/14/: solve.py
2021/2/: solve.cpp  solve.py
2021/3/: solve.cpp  solve.py
2021/4/: solve.cpp  solve.py
2021/5/: solve.py
2021/6/: solve.py
2022/: CMakeLists.txt
(+32 files in other folders)
