[package]
name = "advent-2020-vxf"
version = "0.1.0"
authors = ["Vasco Flores <vasco.flores@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[dependencies]
